(fix) fixes spacing in dashboard

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -124,6 +124,7 @@ h1, h2, h3, h4, h5, h6 {
 .content-box {
   border: 1px solid rgb(61, 61, 61);
   border-radius: 2px;
+  height: 100%;
   margin-bottom: 3em;
   width: 100%;
 }
@@ -137,8 +138,12 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 100%;
 }
 
-.zodiac-glyph {
+.auto-height-box {
   height: auto;
+}
+
+.zodiac-glyph {
+  height: 20px;
   margin-right: .8em;
   max-width: 100%;
   width: 20px;
